kubernetes/apps/security/spiderfoot/app/httproute-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spiderfoot
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/hostname: spiderfoot.homelab0.org
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - spiderfoot.homelab0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: spiderfoot
          port: 5001
          weight: 1
